force-app/main/default/objects/InventoryOutOrder__c/InventoryOutOrder__c.object-meta.xml
<CustomObject>
    <label>본사출고</label>
    <pluralLabel>Inventory Out Orders</pluralLabel>
    <nameField>
        <label>Inventory Out Order No</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>