force-app/main/default/objects/InventoryOutOrder__c/fields/ConfirmInventoryOutOrder__c.field-meta.xml
<CustomField>
    <fullName>ConfirmInventoryOutOrder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Confirm Inventory Out Order</label>
    <referenceTo>User</referenceTo>
    <relationshipName>InventoryOutOrder</relationshipName>
    <type>Lookup</type>
</CustomField>