force-app/main/default/objects/InventoryOutOrder__c/fields/ConfirmNetAmount__c.field-meta.xml
<CustomField>
    <fullName>ConfirmNetAmount__c</fullName>
    <label>Confirm Net Amount</label>
    <summarizedField>InventoryOutOrderLineItem__c.ConfirmNetAmount__c</summarizedField>
    <summaryForeignKey>InventoryOutOrderLineItem__c.InventoryOutOrder__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>