force-app/main/default/objects/InventoryOutOrder__c/fields/ConfirmTaxAmount__c.field-meta.xml
<CustomField>
    <fullName>ConfirmTaxAmount__c</fullName>
    <label>Confirm Tax Amount</label>
    <summarizedField>InventoryOutOrderLineItem__c.ConfirmTaxAmount__c</summarizedField>
    <summaryForeignKey>InventoryOutOrderLineItem__c.InventoryOutOrder__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>