force-app/main/default/objects/InventoryOutOrder__c/fields/DeliveryCompany__c.field-meta.xml
<CustomField>
    <fullName>DeliveryCompany__c</fullName>
    <label>Delivery Company</label>
    <length>200</length>
    <type>Text</type>
</CustomField>