force-app/main/default/objects/InventoryOutOrder__c/fields/DeliveryManager__c.field-meta.xml
<CustomField>
    <fullName>DeliveryManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delivery Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Release1</relationshipName>
    <type>Lookup</type>
</CustomField>