force-app/main/default/objects/InventoryOutOrder__c/fields/DescriptionOrder__c.field-meta.xml
<CustomField>
    <fullName>DescriptionOrder__c</fullName>
    <label>Description Order</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>