force-app/main/default/objects/InventoryOutOrder__c/fields/InventoryOutOrderDate__c.field-meta.xml
<CustomField>
    <fullName>InventoryOutOrderDate__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>과거날짜 안됨</description>
    <label>Inventory Out Order Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>