force-app/main/default/objects/InventoryOutOrder__c/fields/NetAmount__c.field-meta.xml
<CustomField>
    <fullName>NetAmount__c</fullName>
    <label>Net Amount</label>
    <summarizedField>InventoryOutOrderLineItem__c.NetAmount__c</summarizedField>
    <summaryForeignKey>InventoryOutOrderLineItem__c.InventoryOutOrder__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>