force-app/main/default/objects/InventoryOutOrder__c/fields/Partner__c.field-meta.xml
<CustomField>
    <fullName>Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner</label>
    <referenceTo>Partner__c</referenceTo>
    <relationshipName>Inventory_Out_Order</relationshipName>
    <type>Lookup</type>
</CustomField>