force-app/main/default/objects/InventoryOutOrder__c/fields/PurchaseOrder__c.field-meta.xml
<CustomField>
    <fullName>PurchaseOrder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Purchase Order</label>
    <referenceTo>PurchaseOrder__c</referenceTo>
    <relationshipName>InventoryOutOrder</relationshipName>
    <type>Lookup</type>
</CustomField>