force-app/main/default/objects/InventoryOutOrder__c/fields/PurchaseType__c.field-meta.xml
<CustomField>
    <fullName>PurchaseType__c</fullName>
    <description>변경가능</description>
    <label>Purchase Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PurchaseType</valueSetName>
    </valueSet>
</CustomField>