force-app/main/default/objects/InventoryOutOrder__c/fields/Registor__c.field-meta.xml
<CustomField>
    <fullName>Registor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>출고등록한 대리점 직원</description>
    <label>Registor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Release</relationshipName>
    <type>Lookup</type>
</CustomField>