force-app/main/default/objects/InventoryOutOrder__c/fields/RegistorHp__c.field-meta.xml
<CustomField>
    <fullName>RegistorHp__c</fullName>
    <description>출고등록자 선택하면 전화번호 자동입력</description>
    <label>Registor Hp</label>
    <type>Phone</type>
</CustomField>