force-app/main/default/objects/InventoryOutOrder__c/fields/RequestDate__c.field-meta.xml
<CustomField>
    <fullName>RequestDate__c</fullName>
    <description>변경가능</description>
    <label>Request Date</label>
    <type>Date</type>
</CustomField>