force-app/main/default/objects/InventoryOutOrder__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>출고취소는 배송전에만 가능</description>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Registration</fullName>
                <default>true</default>
                <label>등록</label>
            </value>
            <value>
                <fullName>Determined</fullName>
                <label>확정</label>
            </value>
            <value>
                <fullName>Cancellation</fullName>
                <label>취소</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>