force-app/main/default/objects/InventoryOutOrder__c/fields/TaxAmount__c.field-meta.xml
<CustomField>
    <fullName>TaxAmount__c</fullName>
    <label>Tax Amount</label>
    <summarizedField>InventoryOutOrderLineItem__c.TaxAmount__c</summarizedField>
    <summaryForeignKey>InventoryOutOrderLineItem__c.InventoryOutOrder__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>